src/main/java/com/google/security/zynamics/binnavi/parsers/BreakpointCondition/ConditionParser.java
/*
Copyright 2015 Google Inc. All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
// $ANTLR 3.1.2 C:\\Dokumente und
// Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g
// 2009-12-08 13:28:46

package com.google.security.zynamics.binnavi.parsers.BreakpointCondition;

import org.antlr.runtime.BitSet;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.RewriteRuleSubtreeStream;
import org.antlr.runtime.tree.RewriteRuleTokenStream;
import org.antlr.runtime.tree.TreeAdaptor;

@SuppressWarnings("all")
public class ConditionParser extends Parser {
  public static final String[] tokenNames = new String[] {"<invalid>",
      "<EOR>",
      "<DOWN>",
      "<UP>",
      "SUB_EXPRESSION",
      "MEMORY_EXPRESSION",
      "DIGIT",
      "WS",
      "CHARACTER",
      "NUMBER",
      "HEX_NUMBER",
      "IDENTIFIER",
      "EQ_SIGN",
      "GEQ_SIGN",
      "LEQ_SIGN",
      "LT_SIGN",
      "GT_SIGN",
      "NEQ_SIGN",
      "NEQ_SIGN_2",
      "OR",
      "AND",
      "B_OR",
      "B_AND",
      "B_XOR",
      "LSH",
      "RSH",
      "MULT",
      "DIV",
      "MOD",
      "ADD",
      "SUB",
      "'['",
      "']'",
      "'('",
      "')'"};
  public static final int GT_SIGN = 16;
  public static final int LT_SIGN = 15;
  public static final int B_OR = 21;
  public static final int LSH = 24;
  public static final int EQ_SIGN = 12;
  public static final int MOD = 28;
  public static final int NEQ_SIGN = 17;
  public static final int SUB_EXPRESSION = 4;
  public static final int NUMBER = 9;
  public static final int B_XOR = 23;
  public static final int SUB = 30;
  public static final int MULT = 26;
  public static final int AND = 20;
  public static final int EOF = -1;
  public static final int CHARACTER = 8;
  public static final int GEQ_SIGN = 13;
  public static final int T__31 = 31;
  public static final int MEMORY_EXPRESSION = 5;
  public static final int T__32 = 32;
  public static final int T__33 = 33;
  public static final int WS = 7;
  public static final int T__34 = 34;
  public static final int B_AND = 22;
  public static final int RSH = 25;
  public static final int IDENTIFIER = 11;
  public static final int LEQ_SIGN = 14;
  public static final int OR = 19;
  public static final int NEQ_SIGN_2 = 18;
  public static final int DIGIT = 6;
  public static final int DIV = 27;
  public static final int HEX_NUMBER = 10;
  public static final int ADD = 29;

  // delegates
  // delegators


  protected TreeAdaptor adaptor = new CommonTreeAdaptor();
  public static final BitSet FOLLOW_conditionChain_in_prog323 =
      new BitSet(new long[] {0x0000000000000000L});

  public static final BitSet FOLLOW_EOF_in_prog325 = new BitSet(new long[] {0x0000000000000002L});

  public static final BitSet FOLLOW_andExpression_in_conditionChain335 =
      new BitSet(new long[] {0x0000000000080002L});
  public static final BitSet FOLLOW_OR_in_conditionChain338 =
      new BitSet(new long[] {0x0000000280000E00L});

  public static final BitSet FOLLOW_andExpression_in_conditionChain341 =
      new BitSet(new long[] {0x0000000000080002L});
  public static final BitSet FOLLOW_condition_in_andExpression356 =
      new BitSet(new long[] {0x0000000000100002L});


  public static final BitSet FOLLOW_AND_in_andExpression359 =
      new BitSet(new long[] {0x0000000280000E00L});


  public static final BitSet FOLLOW_condition_in_andExpression362 =
      new BitSet(new long[] {0x0000000000100002L});;

  public static final BitSet FOLLOW_formula_in_condition376 =
      new BitSet(new long[] {0x000000000007F000L});

  public static final BitSet FOLLOW_set_in_condition378 =
      new BitSet(new long[] {0x0000000280000E00L});;

  public static final BitSet FOLLOW_formula_in_condition395 =
      new BitSet(new long[] {0x0000000000000002L});

  public static final BitSet FOLLOW_bxorExpression_in_formula408 =
      new BitSet(new long[] {0x0000000000200002L});;

  public static final BitSet FOLLOW_B_OR_in_formula411 =
      new BitSet(new long[] {0x0000000280000E00L});

  public static final BitSet FOLLOW_bxorExpression_in_formula414 =
      new BitSet(new long[] {0x0000000000200002L});;

  public static final BitSet FOLLOW_bandExpression_in_bxorExpression431 =
      new BitSet(new long[] {0x0000000000800002L});

  public static final BitSet FOLLOW_B_XOR_in_bxorExpression434 =
      new BitSet(new long[] {0x0000000280000E00L});;

  public static final BitSet FOLLOW_bandExpression_in_bxorExpression437 =
      new BitSet(new long[] {0x0000000000800002L});

  public static final BitSet FOLLOW_shiftExpression_in_bandExpression454 =
      new BitSet(new long[] {0x0000000000400002L});;

  public static final BitSet FOLLOW_B_AND_in_bandExpression457 =
      new BitSet(new long[] {0x0000000280000E00L});

  public static final BitSet FOLLOW_shiftExpression_in_bandExpression460 =
      new BitSet(new long[] {0x0000000000400002L});;

  public static final BitSet FOLLOW_addExpression_in_shiftExpression477 =
      new BitSet(new long[] {0x0000000003000002L});

  public static final BitSet FOLLOW_set_in_shiftExpression480 =
      new BitSet(new long[] {0x0000000280000E00L});;

  public static final BitSet FOLLOW_addExpression_in_shiftExpression487 =
      new BitSet(new long[] {0x0000000003000002L});

  public static final BitSet FOLLOW_multExpression_in_addExpression504 =
      new BitSet(new long[] {0x0000000060000002L});;

  public static final BitSet FOLLOW_set_in_addExpression507 =
      new BitSet(new long[] {0x0000000280000E00L});

  public static final BitSet FOLLOW_multExpression_in_addExpression514 =
      new BitSet(new long[] {0x0000000060000002L});;

  public static final BitSet FOLLOW_primaryExpression_in_multExpression531 =
      new BitSet(new long[] {0x000000001C000002L});

  public static final BitSet FOLLOW_set_in_multExpression534 =
      new BitSet(new long[] {0x0000000280000E00L});;

  public static final BitSet FOLLOW_primaryExpression_in_multExpression543 =
      new BitSet(new long[] {0x000000001C000002L});

  // Delegated rules



  public static final BitSet FOLLOW_IDENTIFIER_in_primaryExpression558 =
      new BitSet(new long[] {0x0000000000000002L});
  public static final BitSet FOLLOW_NUMBER_in_primaryExpression564 =
      new BitSet(new long[] {0x0000000000000002L});
  public static final BitSet FOLLOW_HEX_NUMBER_in_primaryExpression570 =
      new BitSet(new long[] {0x0000000000000002L});
  public static final BitSet FOLLOW_31_in_primaryExpression576 =
      new BitSet(new long[] {0x0000000280000E00L});
  public static final BitSet FOLLOW_formula_in_primaryExpression578 =
      new BitSet(new long[] {0x0000000100000000L});
  public static final BitSet FOLLOW_32_in_primaryExpression580 =
      new BitSet(new long[] {0x0000000000000002L});
  public static final BitSet FOLLOW_33_in_primaryExpression594 =
      new BitSet(new long[] {0x0000000280000E00L});
  public static final BitSet FOLLOW_formula_in_primaryExpression596 =
      new BitSet(new long[] {0x0000000400000000L});
  public static final BitSet FOLLOW_34_in_primaryExpression598 =
      new BitSet(new long[] {0x0000000000000002L});

  public ConditionParser(final TokenStream input) {
    this(input, new RecognizerSharedState());
  }

  public ConditionParser(final TokenStream input, final RecognizerSharedState state) {
    super(input, state);

  }

  // $ANTLR start "addExpression"
  // C:\\Dokumente und
  // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:84:1:
  // addExpression : multExpression ( ( ADD | SUB ) multExpression )* ;
  public final ConditionParser.addExpression_return addExpression() throws RecognitionException {
    final ConditionParser.addExpression_return retval = new ConditionParser.addExpression_return();
    retval.start = input.LT(1);

    Object root_0 = null;

    Token set25 = null;
    ConditionParser.multExpression_return multExpression24 = null;

    ConditionParser.multExpression_return multExpression26 = null;


    final Object set25_tree = null;

    try {
      // C:\\Dokumente und
      // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:85:3:
      // ( multExpression ( ( ADD | SUB ) multExpression )* )
      // C:\\Dokumente und
      // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:85:5:
      // multExpression ( ( ADD | SUB ) multExpression )*
      {
        root_0 = (Object) adaptor.nil();

        pushFollow(FOLLOW_multExpression_in_addExpression504);
        multExpression24 = multExpression();

        state._fsp--;

        adaptor.addChild(root_0, multExpression24.getTree());
        // C:\\Dokumente und
        // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:85:20:
        // ( ( ADD | SUB ) multExpression )*
        loop7: do {
          int alt7 = 2;
          final int LA7_0 = input.LA(1);

          if (((LA7_0 >= ADD && LA7_0 <= SUB))) {
            alt7 = 1;
          }


          switch (alt7) {
            case 1:
            // C:\\Dokumente und
            // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:85:21:
            // ( ADD | SUB ) multExpression
          {
            set25 = (Token) input.LT(1);
            set25 = (Token) input.LT(1);
            if ((input.LA(1) >= ADD && input.LA(1) <= SUB)) {
              input.consume();
              root_0 = (Object) adaptor.becomeRoot((Object) adaptor.create(set25), root_0);
              state.errorRecovery = false;
            } else {
              final MismatchedSetException mse = new MismatchedSetException(null, input);
              throw mse;
            }

            pushFollow(FOLLOW_multExpression_in_addExpression514);
            multExpression26 = multExpression();

            state._fsp--;

            adaptor.addChild(root_0, multExpression26.getTree());

          }
              break;

            default:
              break loop7;
          }
        } while (true);


      }

      retval.stop = input.LT(-1);

      retval.tree = (Object) adaptor.rulePostProcessing(root_0);
      adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

    } catch (final RecognitionException re) {
      reportError(re);
      recover(input, re);
      retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

    } finally {
    }
    return retval;
  }

  // $ANTLR end "addExpression"
  // $ANTLR start "andExpression"
  // C:\\Dokumente und
  // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:61:1:
  // andExpression : condition ( AND condition )* ;
  public final ConditionParser.andExpression_return andExpression() throws RecognitionException {
    final ConditionParser.andExpression_return retval = new ConditionParser.andExpression_return();
    retval.start = input.LT(1);

    Object root_0 = null;

    Token AND7 = null;
    ConditionParser.condition_return condition6 = null;

    ConditionParser.condition_return condition8 = null;


    Object AND7_tree = null;

    try {
      // C:\\Dokumente und
      // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:62:3:
      // ( condition ( AND condition )* )
      // C:\\Dokumente und
      // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:62:5:
      // condition ( AND condition )*
      {
        root_0 = (Object) adaptor.nil();

        pushFollow(FOLLOW_condition_in_andExpression356);
        condition6 = condition();

        state._fsp--;

        adaptor.addChild(root_0, condition6.getTree());
        // C:\\Dokumente und
        // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:62:15:
        // ( AND condition )*
        loop2: do {
          int alt2 = 2;
          final int LA2_0 = input.LA(1);

          if ((LA2_0 == AND)) {
            alt2 = 1;
          }


          switch (alt2) {
            case 1:
            // C:\\Dokumente und
            // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:62:16:
            // AND condition
          {
            AND7 = (Token) match(input, AND, FOLLOW_AND_in_andExpression359);
            AND7_tree = (Object) adaptor.create(AND7);
            root_0 = (Object) adaptor.becomeRoot(AND7_tree, root_0);

            pushFollow(FOLLOW_condition_in_andExpression362);
            condition8 = condition();

            state._fsp--;

            adaptor.addChild(root_0, condition8.getTree());

          }
              break;

            default:
              break loop2;
          }
        } while (true);


      }

      retval.stop = input.LT(-1);

      retval.tree = (Object) adaptor.rulePostProcessing(root_0);
      adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

    } catch (final RecognitionException re) {
      reportError(re);
      recover(input, re);
      retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

    } finally {
    }
    return retval;
  }

  // $ANTLR end "andExpression"
  // $ANTLR start "bandExpression"
  // C:\\Dokumente und
  // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:76:1:
  // bandExpression : shiftExpression ( B_AND shiftExpression )* ;
  public final ConditionParser.bandExpression_return bandExpression() throws RecognitionException {
    final ConditionParser.bandExpression_return retval =
        new ConditionParser.bandExpression_return();
    retval.start = input.LT(1);

    Object root_0 = null;

    Token B_AND19 = null;
    ConditionParser.shiftExpression_return shiftExpression18 = null;

    ConditionParser.shiftExpression_return shiftExpression20 = null;


    Object B_AND19_tree = null;

    try {
      // C:\\Dokumente und
      // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:77:3:
      // ( shiftExpression ( B_AND shiftExpression )* )
      // C:\\Dokumente und
      // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:77:5:
      // shiftExpression ( B_AND shiftExpression )*
      {
        root_0 = (Object) adaptor.nil();

        pushFollow(FOLLOW_shiftExpression_in_bandExpression454);
        shiftExpression18 = shiftExpression();

        state._fsp--;

        adaptor.addChild(root_0, shiftExpression18.getTree());
        // C:\\Dokumente und
        // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:77:21:
        // ( B_AND shiftExpression )*
        loop5: do {
          int alt5 = 2;
          final int LA5_0 = input.LA(1);

          if ((LA5_0 == B_AND)) {
            alt5 = 1;
          }


          switch (alt5) {
            case 1:
            // C:\\Dokumente und
            // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:77:22:
            // B_AND shiftExpression
          {
            B_AND19 = (Token) match(input, B_AND, FOLLOW_B_AND_in_bandExpression457);
            B_AND19_tree = (Object) adaptor.create(B_AND19);
            root_0 = (Object) adaptor.becomeRoot(B_AND19_tree, root_0);

            pushFollow(FOLLOW_shiftExpression_in_bandExpression460);
            shiftExpression20 = shiftExpression();

            state._fsp--;

            adaptor.addChild(root_0, shiftExpression20.getTree());

          }
              break;

            default:
              break loop5;
          }
        } while (true);


      }

      retval.stop = input.LT(-1);

      retval.tree = (Object) adaptor.rulePostProcessing(root_0);
      adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

    } catch (final RecognitionException re) {
      reportError(re);
      recover(input, re);
      retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

    } finally {
    }
    return retval;
  }

  // $ANTLR end "bandExpression"
  // $ANTLR start "bxorExpression"
  // C:\\Dokumente und
  // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:72:1:
  // bxorExpression : bandExpression ( B_XOR bandExpression )* ;
  public final ConditionParser.bxorExpression_return bxorExpression() throws RecognitionException {
    final ConditionParser.bxorExpression_return retval =
        new ConditionParser.bxorExpression_return();
    retval.start = input.LT(1);

    Object root_0 = null;

    Token B_XOR16 = null;
    ConditionParser.bandExpression_return bandExpression15 = null;

    ConditionParser.bandExpression_return bandExpression17 = null;


    Object B_XOR16_tree = null;

    try {
      // C:\\Dokumente und
      // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:73:3:
      // ( bandExpression ( B_XOR bandExpression )* )
      // C:\\Dokumente und
      // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:73:5:
      // bandExpression ( B_XOR bandExpression )*
      {
        root_0 = (Object) adaptor.nil();

        pushFollow(FOLLOW_bandExpression_in_bxorExpression431);
        bandExpression15 = bandExpression();

        state._fsp--;

        adaptor.addChild(root_0, bandExpression15.getTree());
        // C:\\Dokumente und
        // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:73:20:
        // ( B_XOR bandExpression )*
        loop4: do {
          int alt4 = 2;
          final int LA4_0 = input.LA(1);

          if ((LA4_0 == B_XOR)) {
            alt4 = 1;
          }


          switch (alt4) {
            case 1:
            // C:\\Dokumente und
            // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:73:21:
            // B_XOR bandExpression
          {
            B_XOR16 = (Token) match(input, B_XOR, FOLLOW_B_XOR_in_bxorExpression434);
            B_XOR16_tree = (Object) adaptor.create(B_XOR16);
            root_0 = (Object) adaptor.becomeRoot(B_XOR16_tree, root_0);

            pushFollow(FOLLOW_bandExpression_in_bxorExpression437);
            bandExpression17 = bandExpression();

            state._fsp--;

            adaptor.addChild(root_0, bandExpression17.getTree());

          }
              break;

            default:
              break loop4;
          }
        } while (true);


      }

      retval.stop = input.LT(-1);

      retval.tree = (Object) adaptor.rulePostProcessing(root_0);
      adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

    } catch (final RecognitionException re) {
      reportError(re);
      recover(input, re);
      retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

    } finally {
    }
    return retval;
  }

  // $ANTLR end "bxorExpression"
  // $ANTLR start "condition"
  // C:\\Dokumente und
  // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:65:1:
  // condition : formula ( EQ_SIGN | GEQ_SIGN | LEQ_SIGN | LT_SIGN | GT_SIGN | NEQ_SIGN | NEQ_SIGN_2
  // ) formula ;
  public final ConditionParser.condition_return condition() throws RecognitionException {
    final ConditionParser.condition_return retval = new ConditionParser.condition_return();
    retval.start = input.LT(1);

    Object root_0 = null;

    Token set10 = null;
    ConditionParser.formula_return formula9 = null;

    ConditionParser.formula_return formula11 = null;


    final Object set10_tree = null;

    try {
      // C:\\Dokumente und
      // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:65:11:
      // ( formula ( EQ_SIGN | GEQ_SIGN | LEQ_SIGN | LT_SIGN | GT_SIGN | NEQ_SIGN | NEQ_SIGN_2 )
      // formula )
      // C:\\Dokumente und
      // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:65:14:
      // formula ( EQ_SIGN | GEQ_SIGN | LEQ_SIGN | LT_SIGN | GT_SIGN | NEQ_SIGN | NEQ_SIGN_2 )
      // formula
      {
        root_0 = (Object) adaptor.nil();

        pushFollow(FOLLOW_formula_in_condition376);
        formula9 = formula();

        state._fsp--;

        adaptor.addChild(root_0, formula9.getTree());
        set10 = (Token) input.LT(1);
        set10 = (Token) input.LT(1);
        if ((input.LA(1) >= EQ_SIGN && input.LA(1) <= NEQ_SIGN_2)) {
          input.consume();
          root_0 = (Object) adaptor.becomeRoot((Object) adaptor.create(set10), root_0);
          state.errorRecovery = false;
        } else {
          final MismatchedSetException mse = new MismatchedSetException(null, input);
          throw mse;
        }

        pushFollow(FOLLOW_formula_in_condition395);
        formula11 = formula();

        state._fsp--;

        adaptor.addChild(root_0, formula11.getTree());

      }

      retval.stop = input.LT(-1);

      retval.tree = (Object) adaptor.rulePostProcessing(root_0);
      adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

    } catch (final RecognitionException re) {
      reportError(re);
      recover(input, re);
      retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

    } finally {
    }
    return retval;
  }

  // $ANTLR end "condition"
  // $ANTLR start "conditionChain"
  // C:\\Dokumente und
  // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:57:1:
  // conditionChain : andExpression ( OR andExpression )* ;
  public final ConditionParser.conditionChain_return conditionChain() throws RecognitionException {
    final ConditionParser.conditionChain_return retval =
        new ConditionParser.conditionChain_return();
    retval.start = input.LT(1);

    Object root_0 = null;

    Token OR4 = null;
    ConditionParser.andExpression_return andExpression3 = null;

    ConditionParser.andExpression_return andExpression5 = null;


    Object OR4_tree = null;

    try {
      // C:\\Dokumente und
      // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:58:3:
      // ( andExpression ( OR andExpression )* )
      // C:\\Dokumente und
      // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:58:5:
      // andExpression ( OR andExpression )*
      {
        root_0 = (Object) adaptor.nil();

        pushFollow(FOLLOW_andExpression_in_conditionChain335);
        andExpression3 = andExpression();

        state._fsp--;

        adaptor.addChild(root_0, andExpression3.getTree());
        // C:\\Dokumente und
        // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:58:19:
        // ( OR andExpression )*
        loop1: do {
          int alt1 = 2;
          final int LA1_0 = input.LA(1);

          if ((LA1_0 == OR)) {
            alt1 = 1;
          }


          switch (alt1) {
            case 1:
            // C:\\Dokumente und
            // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:58:20:
            // OR andExpression
          {
            OR4 = (Token) match(input, OR, FOLLOW_OR_in_conditionChain338);
            OR4_tree = (Object) adaptor.create(OR4);
            root_0 = (Object) adaptor.becomeRoot(OR4_tree, root_0);

            pushFollow(FOLLOW_andExpression_in_conditionChain341);
            andExpression5 = andExpression();

            state._fsp--;

            adaptor.addChild(root_0, andExpression5.getTree());

          }
              break;

            default:
              break loop1;
          }
        } while (true);


      }

      retval.stop = input.LT(-1);

      retval.tree = (Object) adaptor.rulePostProcessing(root_0);
      adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

    } catch (final RecognitionException re) {
      reportError(re);
      recover(input, re);
      retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

    } finally {
    }
    return retval;
  }

  // $ANTLR end "conditionChain"
  // $ANTLR start "formula"
  // C:\\Dokumente und
  // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:68:1:
  // formula : bxorExpression ( B_OR bxorExpression )* ;
  public final ConditionParser.formula_return formula() throws RecognitionException {
    final ConditionParser.formula_return retval = new ConditionParser.formula_return();
    retval.start = input.LT(1);

    Object root_0 = null;

    Token B_OR13 = null;
    ConditionParser.bxorExpression_return bxorExpression12 = null;

    ConditionParser.bxorExpression_return bxorExpression14 = null;


    Object B_OR13_tree = null;

    try {
      // C:\\Dokumente und
      // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:69:3:
      // ( bxorExpression ( B_OR bxorExpression )* )
      // C:\\Dokumente und
      // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:69:5:
      // bxorExpression ( B_OR bxorExpression )*
      {
        root_0 = (Object) adaptor.nil();

        pushFollow(FOLLOW_bxorExpression_in_formula408);
        bxorExpression12 = bxorExpression();

        state._fsp--;

        adaptor.addChild(root_0, bxorExpression12.getTree());
        // C:\\Dokumente und
        // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:69:20:
        // ( B_OR bxorExpression )*
        loop3: do {
          int alt3 = 2;
          final int LA3_0 = input.LA(1);

          if ((LA3_0 == B_OR)) {
            alt3 = 1;
          }


          switch (alt3) {
            case 1:
            // C:\\Dokumente und
            // Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g:69:21:
            // B_OR bxorExpression
          {
            B_OR13 = (Token) match(input, B_OR, FOLLOW_B_OR_in_formula411);
            B_OR13_tree = (Object) adaptor.create(B_OR13);
            root_0 = (Object) adaptor.becomeRoot(B_OR13_tree, root_0);

            pushFollow(FOLLOW_bxorExpression_in_formula414);
            bxorExpression14 = bxorExpression();

            state._fsp--;

            adaptor.addChild(root_0, bxorExpression14.getTree());

          }
              break;

            default:
              break loop3;
          }
        } while (true);


      }

      retval.stop = input.LT(-1);

      retval.tree = (Object) adaptor.rulePostProcessing(root_0);
      adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

    } catch (final RecognitionException re) {
      reportError(re);
      recover(input, re);
      retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

    } finally {
    }
    return retval;
  }

  // $ANTLR end "formula"
  public String getGrammarFileName() {
    return "C:\\Dokumente und Einstellungen\\sp\\workspace\\com.google.security.zynamics.binnavi-Trunk\\src\\com.google.security.zynamics.binnavi\\parsers\\BreakpointCondition\\Condition.g";
  }

  public String[] getTokenNames() {
    return ConditionParser.tokenNames;
  }

  public TreeAdaptor getTreeAdaptor() {
    return adaptor;
  }
